--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "face-api.js": "^0.22.2",
     "firebase": "^9.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-scripts": "5.0.1",
+    "victory": "^36.6.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
