--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-google-button": "^0.7.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "styled-components": "^5.3.5",
     "victory": "^36.6.6",
     "web-vitals": "^2.1.4"
