--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "box": "^0.0.4",
     "firebase": "^9.9.4",
     "firebase-admin": "^11.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-google-button": "^0.7.2",
+    "react-modal": "^3.15.1",
     "react-scripts": "5.0.1",
     "victory": "^36.6.8",
     "web-vitals": "^2.1.4"
