--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.4",
     "@mui/x-data-grid": "^5.17.6",
+    "@progress/kendo-licensing": "^1.2.2",
+    "@progress/kendo-react-buttons": "^5.8.0",
+    "@progress/kendo-react-conversational-ui": "^5.8.0",
+    "@progress/kendo-react-intl": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
