--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui-treasury/components": "^1.10.1",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.4",
     "@mui/x-data-grid": "^5.17.6",
