--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "box": "^0.0.4",
+    "crypto-browserify": "^3.12.0",
     "face-api.js": "^0.22.2",
     "firebase": "^9.9.4",
     "firebase-admin": "^11.0.1",
