--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^13.5.0",
     "box": "^0.0.4",
     "crypto-browserify": "^3.12.0",
+    "dayjs": "^1.11.6",
     "face-api.js": "^0.22.2",
     "firebase": "^9.9.4",
     "firebase-admin": "^11.0.1",
