--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui-treasury/components": "^1.10.1",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.4",
+    "@mui/styles": "^5.10.10",
     "@mui/x-data-grid": "^5.17.6",
     "@progress/kendo-licensing": "^1.2.2",
     "@progress/kendo-react-buttons": "^5.8.0",
