--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-google-button": "^0.7.2",
     "react-modal": "^3.15.1",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "victory": "^36.6.8",
     "web-vitals": "^2.1.4"
